--- a/Task 2/Tasks_2_1_1/2_1_1/2_1_1/2_1_1.csproj
+++ b/Task 2/Tasks_2_1_1/2_1_1/2_1_1/2_1_1.csproj
@@ -3,6 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <RootNamespace>_2_1_1</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MyString\StringLibrary.csproj" />
+  </ItemGroup>
 
 </Project>
